--- a/login_pages/login.css
+++ b/login_pages/login.css
@@ -84,7 +84,7 @@ body {
 }
 
 .login-box {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #f5f5f5;
     padding: 30px;
     border-radius: 15px; /* Rounded corners */
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
